Puri Ubud - Sejarah Pariwisata Puri Ubud

--- a/src/2. Puri Ubud.jade
+++ b/src/2. Puri Ubud.jade
@@ -35,5 +35,22 @@ html
       Section
         p Pemerintahan Belanda mulai ikut campur dalam urusan politik di Bali pada awal abad ke 19, dengan menyerang kerajaan-kerajaan di Badung, kerajaanBuleleng dan kerajaan Klungkung. Peperangan besar pun terjadi, perang ini di Bali lebih dikenal dengan nama Puputan. Pada awal abad 21 di bawah pemerintahan Tjokorde Gede Raka Sukawati, wilayah Ubud menjadi wilayah cabang dari Sukawati. Pada tahun 1981, maka di Ubud ditetapkan sebagai sebuah kecamatan di wilayah kabupaten Gianyar dengan mencangkup wilayah desa Tegallalang, Peliatan, Mas dan Kedewatan.
 
+      Section
+        h2 Sejarah Pariwisata Ubud
+        p Pada awal tahun 1930an, banyak wisatawan asing yang datang ke Bali, terutama mengunjungi wilayah Ubud. Kenapa hanya di Ubud? Hal ini dikarenakan kemampuan dari Tjokorde Gede Agung Sukawati yang memerintah Ubud (saudara Raja Sukawati - Tjokorde Gede Raka Sukawati) dalam bahasa Inggris dan bahasa Belanda. Selain itu karena kemampuan dan pengetahuan raja Ubud akan bisnis, maka di bangunlah guest house untuk tempat wisatawan menginap di Ubud. Perkembangan pariwisata Ubud juga tidak lepas dari peran Raja Sukawati, kakak dari Raja Ubud yang mengundang seniman lukis Walter Spiers ke Ubud untuk tinggal dan melukis di Ubud.
+
+      Section
+        p Tinggalnya Walter Spiers di Ubud menjadikan trend di kalangan seniman lukis asing untuk berkarya di Ubud. Melalui lukisan inilah, Ubud mulai terkenal ke mancanegara, karena lukisan dari pelukis asing, mengambarkan tentang kehidupan di Ubud, serta pelukis asing melakukan pameran lukisan di luar negeri.
+
+      Section
+        p Sebuah asosiasi seni lukis didirikan oleh Tjokorde Gede Agung (raja Ubud), Walter Spies dan Rudolf Bonnet, serta beberapa seniman lokal yang diberi nama Pita Maha. Tujuan dari asosiasi seni lukis ini adalah mengumpulkan para seniman Bali, untuk mengajarkan kesenian kepada para muda-mudi di daerah Ubud. Oleh sebab itu, sampai saat ini, objek wisata Ubud menjadi pusat museum di Bali. Museum yang ada di Ubud seperti Arma Museum Ubud dan Museum Puri Lukisan Ubud.
+
+
+
+
+
+
+
+
     script(src='build/build.js')
 
