--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Wisata Ubud Bali
+    title Puri Ubud
 
     link(rel='stylesheet', type='text/css', href='build/build.css')
 
@@ -11,68 +11,47 @@ html
 
     article
 
-      section
-        h1 Wisata Ubud Bali
-        h4 TI-A SORE
-        h5 131110381 - Adeline Rosabella
-        h5 131111483 - Andy Khu
-        h5 131112641 - Dennis Daslim
-        h5 131112781 - Fransisca Loren
+      Section
+        h1 Puri Ubud 
 
       section
-        h3 Contoh Gambar Wisata Ubud Bali
-        img.big(src="images/wisata-ubud-bali.png")
+        h2 Sejarah Puri Ubud 
+        p Pada saat kerajaan Majapahit runtuh di abad ke 15, maka terjadi eksodus besar-besaran dari bangsawan Jawa untuk migrasi ke pulau Bali. Bangsawan dari pulau Jawa inilah yang mendirikan kerajaan Gelgel yang berada di kabupaten Klungkung, kabupaten di bagian tenggara pulau Bali. Kerajaan Gelgel inilah yang memberikan perlindungan kepada para bangsawan dari Jawa yang migrasi ke pulau Bali. Bangsawan dari Jawa yang membawa sistem kasta di Bali.
+      section        
+        p Pada abad ke 17 banyak berdiri kerajaan baru di wilayah pulau Bali, salah satunya di Ubud. Pada abad ke 17, banyak di bangun rumah para bangsawan di Ubud yang di beri nama Puri. Pada periode ini, banyak terjadi peperangan antar kerajaan di Bali, yang memperebutkan kekuasaan akan perluasan daerah.
+
+      Section
+        P Seorang pangeran dari kerajaan Gelgel Klungkung, dikirim ke daerah desa Sukawati untuk membangun sebuah istana kerajaan yang memiliki keindahan arsitektur agar ditujukan untuk kekuasaan di wilayah Gianyar. Pada saat pembangunan istana kerajaan di Sukawati, banyak seniman Bali dari berbagai daerah di kirim ke daerah Sukawati untuk membantu pembangunan istana. Setelah pembagunan istana di Sukawati selesai, banyak dari seniman memilih untuk tinggal di Sukawati. Oleh karena itu sampai saat ini, daerah Sukawati menjadi salah satu pusat seni baik seni tari, seni lukis, seni patung ataupun seni musik dan yang terkenal adalah pasar seni Sukawati.
 
       section
+        p Setelah berhasilnya di bangun istana di Sukawati, para prajurit istana Sukawati pada akhir abad 17 di kirim ke Ubud, untuk mengamankan Ubud yang sering terjadi konflik. Konflik yang terjadi di Ubud pada akhir abad ke 17, antara dua orang sepupu, yang satu berada di wilayah Padang Tegal Ubud dan yang lagi satu berada di wilayah Taman Ubud, yang berada di sebelah utara wilayah Padang Tegal Ubud. Peperangan antar ke dua sepupu ini, membuat raja Sukawati mengutus ke dua saudarnya untuk mengamankan wilayah Ubud.
+
+      Section
+        P Saudara dari Raja Sukawati tersebut adalah Tjokorde Ngurah Tabanan yang dikirim ke wilayah Peliatan Ubud dan Tjokorde Tangkeban ke wilayah Sambahan Ubud. Kedua saudara dari raja Sukawati kemudian membangun istana di daerah tujuan mereka masing-masing dengan tujuan mengamankan wilayah Ubud. Setelah Tjokorde Ngurah Tabanan yang membangun kerajaan di Peliatan Ubud, maka Tjokorde Ngurah Tabanan dengan dibantu oleh Raja Mengwi, memenuhi wilayah Ubud dengan penduduk. Dengan bertambahnya jumlah penduduk di Ubud, maka perekonomian mulai berkembang.
+
+      Section
+         p Pada abad ke 19, Belanda mulai memasuki pulau Bali. Beberapa kerajaan seperti kerajaan Mengwi merasa tidak senang akan kehadiran Belanda di daerah mereka. Kecerdikan Belanda yang mampu memprovokasi musuh lama kerajaan Mengwi, untuk membuat aliansi untuk menyerang kerajaan Mengwi. Karena di serang oleh banyak musuh, maka kerajaan Mengwi mengalami kekelahan telak, yang membuat wilayah mereka dibagi-bagi oleh kerajaan aliansi penyerang.
+
+      Section
+        p Pemerintahan Belanda mulai ikut campur dalam urusan politik di Bali pada awal abad ke 19, dengan menyerang kerajaan-kerajaan di Badung, kerajaanBuleleng dan kerajaan Klungkung. Peperangan besar pun terjadi, perang ini di Bali lebih dikenal dengan nama Puputan. Pada awal abad 21 di bawah pemerintahan Tjokorde Gede Raka Sukawati, wilayah Ubud menjadi wilayah cabang dari Sukawati. Pada tahun 1981, maka di Ubud ditetapkan sebagai sebuah kecamatan di wilayah kabupaten Gianyar dengan mencangkup wilayah desa Tegallalang, Peliatan, Mas dan Kedewatan.
+
+      Section
         h2 Sejarah Pariwisata Ubud
-        p Pada awal tahun 1930an, banyak wisatawan asing yang datang ke Bali, terutama mengunjungi wilayah Ubud. Kenapa hanya di Ubud? Hal ini dikarenakan kemampuan dari Tjokorde Gede Agung Sukawati yang memerintah Ubud (saudara Raja Sukawati – Tjokorde Gede Raka Sukawati) dalam bahasa Inggris dan bahasa Belanda. Selain itu karena kemampuan dan pengetahuan raja Ubud akan bisnis, maka di bangunlah guest house untuk tempat wisatawan menginap di Ubud. Perkembangan pariwisata Ubud juga tidak lepas dari peran Raja Sukawati, kakak dari Raja Ubud yang mengundang seniman lukis Walter Spiers ke Ubud untuk tinggal dan melukis di Ubud.
+        p Pada awal tahun 1930an, banyak wisatawan asing yang datang ke Bali, terutama mengunjungi wilayah Ubud. Kenapa hanya di Ubud? Hal ini dikarenakan kemampuan dari Tjokorde Gede Agung Sukawati yang memerintah Ubud (saudara Raja Sukawati - Tjokorde Gede Raka Sukawati) dalam bahasa Inggris dan bahasa Belanda. Selain itu karena kemampuan dan pengetahuan raja Ubud akan bisnis, maka di bangunlah guest house untuk tempat wisatawan menginap di Ubud. Perkembangan pariwisata Ubud juga tidak lepas dari peran Raja Sukawati, kakak dari Raja Ubud yang mengundang seniman lukis Walter Spiers ke Ubud untuk tinggal dan melukis di Ubud.
+
+      Section
         p Tinggalnya Walter Spiers di Ubud menjadikan trend di kalangan seniman lukis asing untuk berkarya di Ubud. Melalui lukisan inilah, Ubud mulai terkenal ke mancanegara, karena lukisan dari pelukis asing, mengambarkan tentang kehidupan di Ubud, serta pelukis asing melakukan pameran lukisan di luar negeri.
+
+      Section
         p Sebuah asosiasi seni lukis didirikan oleh Tjokorde Gede Agung (raja Ubud), Walter Spies dan Rudolf Bonnet, serta beberapa seniman lokal yang diberi nama Pita Maha. Tujuan dari asosiasi seni lukis ini adalah mengumpulkan para seniman Bali, untuk mengajarkan kesenian kepada para muda-mudi di daerah Ubud. Oleh sebab itu, sampai saat ini, objek wisata Ubud menjadi pusat museum di Bali. Museum yang ada di Ubud seperti Arma Museum Ubud dan Museum Puri Lukisan Ubud.
 
-      section
-        h2 Responsive Slides
-        h3 Powered by <a href="https://github.com/markdalgleish/bespoke-scale">bespoke-scale</a>
 
-      section
-        h2 Bullet List
-        h3.bullet Powered by <a href="https://github.com/markdalgleish/bespoke-bullets">bespoke-bullets</a>
-        ul
-          li Bullet 1
-          li Bullet 2
-          li Bullet 3
 
-      section
-        h2 Syntax Highlighting
-        h3 Powered by <a href="http://twitter.com/LeaVerou">Lea Verou</a>'s <a href="https://github.com/LeaVerou/prism">Prism</a>
-        pre
-          code.language-javascript.
-            bespoke.from('article', [
-              classes(),
-              keys(),
-              touch(),
-              bullets('li, .bullet')
-            ]);
 
-      section(data-bespoke-hash='named-route')
-        h2 Named Route
-        h3 Powered by <a href="https://github.com/markdalgleish/bespoke-hash">bespoke-hash</a>
-        p Look up! This route has been named with a <em>'data-bespoke-hash'</em> attribute.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h2 Emphatic Slide!
-        h3 Powered by <a href="https://github.com/markdalgleish/bespoke-backdrop">bespoke-backdrop</a>
 
-      section
-        h2.bullet Just the beginning...
-        br
-        ul
-          li Edit <a href="http://jade-lang.com/">Jade</a> markup in <em>'src/index.jade'</em>
-          li Edit <a href="http://learnboost.github.io/stylus/">Stylus</a> styles in <em>'src/styles/main.styl'</em>
-          li Edit JavaScript in <em>'src/scripts/main.js'</em>
-        br
-        ul
-          li
-            strong Enjoy! :)
-            a(href='http://twitter.com/markdalgleish')  -@markdalgleish
+
 
     script(src='build/build.js')
+
+
