Puri Ubud - Penambahan Gambar

--- a/src/2. Puri Ubud.jade
+++ b/src/2. Puri Ubud.jade
@@ -13,6 +13,7 @@ html
 
       Section
         h1 Puri Ubud 
+        img(src="images/istana-puri-saren-ubud-bali.jpg")
 
       section
         h2 Sejarah Puri Ubud 
