--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Lempad House
+    title Pura Taman Saraswati
 
     link(rel='stylesheet', type='text/css', href='build/build.css')
 
@@ -11,50 +11,60 @@ html
 
     article
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h1 Lempad House
-        img(src="images/lempad-house.jpg" width = 500)
+      Section
+        h1 Pura Taman Saraswati
+        img(src="images/Pura-Taman-Saraswati-Ubud.jpg")
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p  Saat wisatawan berencana liburan di Bali, ada 2 tempat wisata yang menjadi prioritas dari sebagian besar wisatawan untuk di kunjungi. Kedua objek wisata tersebut adalah tempat wisata Kuta dan tempat wisata Ubud. Kedua tempat wisata favorit wisatawan ini, menawarkan dua hal yang berbeda. Kalau Kuta lebih dominan akan wisata pantai dan kehidupan malam, sedangkan objek wisata di Ubud menawarkan wisata alam, wisata seni dan budaya.
+      section
+        h2 Penjelasan Pura Taman Saraswati
+        p Pura Taman Saraswati Ubud - Wisata ke Ubud Bali, apa ada yang tidak suka? Jika ada, sebagian besar penyebabnya karena harga-harga di kawasan objek wisata Ubud, lebih mahal dibandingkan dengan objek wisata terkenal di Bali yang lain.Hampir sebagian besar wisatawan mancanegara dan domestik, selalu merencanakan untuk mengunjungi tempat wisata di Ubud. Disini tersedia banyak hotel dari kelas bintang lima sampai dengan hotel melati.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')        
-        p Di halaman ini kami akan menuliskan untuk anda, tentang salah satu objek wisata di Ubud, yang di kenal dengan nama Lempad House. Tentunya tempat wisata Lempad House akan sangat cocok di kunjungi, jika anda menyukai seni pahat dan seni lukis khas Bali. Sebelum kami menuliskan akan Lempad House, kami akan menuliskan sedikit informasi dari pemiliknya, yang mendapat sorotan luar biasa dari dunia international, akan hasil karya seninya dan kisah hidupnya.
+      section
+        h2 Penjelasan Pura Taman Saraswati (cont)
+        p Selain itu, Ubud juga sangat terkenal akan wisata arung jeram yang lebih dikenal dengan nama Ayung rafting Ubud.Desa Ubud, sangat terkenal akan wisata seni dan budaya dan setiap hari di tempat wisata Ubud, diselenggarakan pentas kesenian Bali. Salah satunya adalah pementasan tari kecak Bali.Ubud merupakan salah satu tempat terbaik untuk menonton tari kecak di Bali, selain menonton tari kecak di Uluwatu. Salah satu tempat pementasan tarian kecak di Ubud adalah di Pura Taman Saraswati Ubud.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        H2 I Gusti Nyoman Lempad        
+      section
+        h2 Menonton Tari Kecak Di Pura Taman Saraswati Ubud
+        p Sebelum kami menuliskan tentang tari kecak di Pura Taman Saraswati Ubud. Ada baiknya kami menuliskan sedikit tentang pura Pura Taman Saraswati Ubud.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Pemilik dari Lempad House Ubud adalah seorang arsitek, seniman pahat dan seniman lukis yang di perkirakan umurnya 116 tahun. Seniman ini bernama I Gusti Nyoman Lempad. Kepastian kapan I Gusti Nyoman Lempad lahir, tidak ada yang tahu, tapi diperkirakan sekitar tahun 1862 dan beliau meninggal dunia pada tahun 1978. I Gusti Nyoman Lempad meninggal dengan cara yang tidak biasa, karena mampu memilih waktu kematiannya secara sadar. Mungkin ini terdengar seperti di buat-buat tetapi hal ini adalah kisah nyata yang di liput oleh media International.
+      Section
+        P Seperti yang anda tahu, pura adalah tempat suci agama hindu di Bali dan pura Taman Saraswati Ubud adalah salah satunya. Pura ini, sesuai dengan namanya adalah tempat pemujaan Dewi Saraswati (Dewi Pengetahuan). Lokasi dari pura ini, terdapat di jalan raya Ubud.
+        p Pura Taman Saraswati Ubud, sedikit berbeda dari pura-pura lain yang ada di Bali. Pura ini memiliki kolam yang banyak terdapat bunga teratai dan kolam teratai inilah, daya tarik utama dari pura Saraswati.
+        p Jika anda menyukai melihat seni ukir khas Ubud Bali, disinilah tempatnya untuk melihat. Hampir setiap bangunan pura, terdapat seni ukir dari para seniman Ubud.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-         p Satu bulan sebelum hari kematiannya, I Gusti Nyoman Lempad memanggil seluruh keluarganya dan meminta untuk memandikan dan mendandani, selain itu mengatakan kepada sanak keluarganya akan warisan mereka. Hari kematian yang dipilih oleh I Gusti Nyoman Lempad adalah hari suci bagi umat Hindu Bali. Liputan sesaat sebelum kematiannya dan saat upacara kematianya di liput oleh Lawrence Blair untuk acara televisi Ring of Fire: An Indonesian Odyssey, dan liputan tersebut dapat anda lihat di Youtube dengan mengklik link dibawah ini.
-         P <a href = “https://www.youtube.com/watch?v=S4AHmf-3-fA”>>>Visiting a 116 year old man<<</a>
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P I Gusti Nyoman Lempad, salah satu seniman terbaik yang Bali pernah miliki, ahli dalam seni lukis dan seni pahatan batu khususnya bagunan pura yang banyak terdapat di Ubud. I Gusti Nyoman Lempad buta huruf, tetapi memiliki ide-ide cemerlang dalam menghasilkan karya-karyanya. Banyak hasil karya lukisnya diberikan kepada orang secara percuma. 
+      section
+        h2 Pura Kolam Bunga Teratai
+        p Pura ini memiliki panggung pemantasan tari kecak dan panggung di kelilingi oleh kolam teratai. Saat anda liburan di Bali dan berencana untuk menonton tarian kecak Ubud di Pura Taman Saraswati, sebaiknya anda memperhatikan terlebih dahulu, jadwal pementasan tarian kecak di Pura Taman Saraswat Ubud. Tidak setiap hari, diadakan pementasan tarian kecak di pura ini.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img.big(src="images/lempad-house-2.jpg")
+      Section
+        h1 Jadwal Pementasan Tari Kecak Di Pura Taman Saraswati Ubud
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h2 Rumah Seniman 
-        h3 I Gusti Nyoman Lempad
+      Section
+         p Hari selasa dan hari kamis, mulai pertunjukan jam 19:30, dengan harga tiket Rp 75.000 per orang. Pertunjukan tarian kecak di bawakan oleh group tari Sandhi Suara.
+         p Bagi anda yang ingin menonton tarian kecak di Ubud tidak akan susah, walupun anda tidak datang pada hari selasa atau kamis. Setiap hari diadakan pementasan tarian kecak di Ubud, hanya tempat pementasannya yang berbeda-beda.
+         <p style="color:red"> Lihat di sini <a href="http://www.rentalmobilbali.net/tari-kecak-ubud/">Jadwal Tari Kecak Ubud.</a></p>
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Saat anda liburan, sempatkanlah untuk mengunjungi rumah dari I Gusti Nyoman Lempad. Rumah ini masih bernuansa rumah asli Bali, yang terdapat kebun di dalamnya. Anda juga dapat melihat beberapa Bonsai yang sangat tertata rapi. Tentunya anda juga dapat melihat beberapa hasil karya lukis dari I Gusti Nyoman Lempad dan penghargaan yang pernah diterimanya.
+      Section
+        p 
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Lokasi Lempad house berada di  Jalan dewi Sita Ubud. Untuk peta lokasi Lempad House Ubud, silakan klik link. Beberapa hasil karya lukisan I Gusti Nyoman Lempad, dapat anda lihat di museum Neka Ubud dan museum puri Lukisan Ubud. Untuk melihat beberapa koleksi lukisan dari I Gusti Nyoman Lempad di rumahnya dapat anda lihat disini, koleksi lukisan Lempad House.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Tentunya saat anda ingin mengunjungi Lempad House, pasti akan memerlukan kendaraan. Ada beberapa cara terbaik untuk mengunjungi Lempad House. Jika anda menginap di Ubud, menggunakan taksi salah satu cara terbaik, selain murah dan sangat mudah di cari di kawasan wisata Ubud. Jika anda tidak menginap di Ubud, tentunya menggunakan taksi membuat biaya akan lebih mahal. Oleh karena itu, kami sarankan anda untuk mengunakan jasa sewa mobil di Bali dengan supir. Dengan menggunakan jasa sewa mobil di Bali dengan supir, anda tidak perlu memikirkan akan tempat parkir yang sangat susah di cari di kawasan wisata Ubud.
+      Section
+        h2 
+        p 
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        P Selain menggunakan jasa sewa mobil Bali dengan supir, anda juga dapat mencari paket wisata di Bali yang menawarkan paket wisata ke Ubud. Walaupun tidak banyak penyedia jasa paket tour murah di Bali yang memasukan rute tour untuk mengunjungi Lempad House, tentunya anda dapat meminta penyedia jasa paket tour di Bali untuk membuat jadwal berkunjung ke Lempad House selama wisata di Bali.
+      Section
+        p 
+
+
+      Section
+        p 
+
+
+
+
+
+
+
+
     script(src='build/build.js')
-
-
-
-
-
