Jadwal Tari Kecak Ubud

--- a/src/4. Tari Kecak Ubud .jade
+++ b/src/4. Tari Kecak Ubud .jade
@@ -33,18 +33,60 @@ html
         img(src="images/tari-kecak-di-pura-uluwatu.jpg")
 
       Section
-        P 
+        h2 Jadwal & Harga Tiket Tari Kecak Ubud
+        p Jika anda ingin nonton tari kecak api di Ubud, pementasan tarian kecak hanya dilakukan pada saat malam hari. Pertunjukan tari kecak Ubud, biasanya dimulai pada jam 19:00. Di Ubud ada dua tempat terkenal untuk menonton tari kecak. Tempat pertujukan tari kecak Ubud dipentaskan antara lain di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Jadwal pementasan dituliskan di slide berikutnya
 
       Section
-         p 
+         h3 Hari Minggu
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Padang Tegal Kaja
+             td 19:00
+             td Trene Jenggala
+             td Rp. 75.000,-
+           tr(align='left')
+             td Pura Batukaru
+             td 19:30
+             td Desa Adat Sambahan 
+             td Rp. 75.000,-
 
       Section
-        p 
-
+         h3 Hari Senin
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Desa Junjungan
+             td 18:30
+             td Desa Adat Junjungan
+             td Rp. 75.000,-
+           tr(align='left')
+             td Pura Dalem Ubud
+             td 19:30
+             td Adat Ubud Kaja
+             td Rp. 80.000,-
 
       Section
-        h2 
-        p 
+         h3 Hari Selasa
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Jaba Pura Taman Sari
+             td 19:00
+             td Sandhi Suara
+             td Rp. 75.000,-
 
       Section
         p 
@@ -61,6 +103,8 @@ html
 
 
     script(src='build/build.js')
+
+
 
 
 
