--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Pura Taman Saraswati
+    title Tari Kecak Ubud
 
     link(rel='stylesheet', type='text/css', href='build/build.css')
 
@@ -12,46 +12,81 @@ html
     article
 
       Section
-        h1 Pura Taman Saraswati
-        img(src="images/Pura-Taman-Saraswati-Ubud.jpg")
+        h1 Tari Kecak Ubud
+        img(src="images/Tari-Kecak-Ubud.jpg")
 
       section
-        h2 Penjelasan Pura Taman Saraswati
-        p Pura Taman Saraswati Ubud - Wisata ke Ubud Bali, apa ada yang tidak suka? Jika ada, sebagian besar penyebabnya karena harga-harga di kawasan objek wisata Ubud, lebih mahal dibandingkan dengan objek wisata terkenal di Bali yang lain.Hampir sebagian besar wisatawan mancanegara dan domestik, selalu merencanakan untuk mengunjungi tempat wisata di Ubud. Disini tersedia banyak hotel dari kelas bintang lima sampai dengan hotel melati.
+        h3 Gambaran Tari Kecak Api Ubud
+        img(src="images/Tari-Kecak-Ubud-1.jpg")
 
       section
-        h2 Penjelasan Pura Taman Saraswati (cont)
-        p Selain itu, Ubud juga sangat terkenal akan wisata arung jeram yang lebih dikenal dengan nama Ayung rafting Ubud.Desa Ubud, sangat terkenal akan wisata seni dan budaya dan setiap hari di tempat wisata Ubud, diselenggarakan pentas kesenian Bali. Salah satunya adalah pementasan tari kecak Bali.Ubud merupakan salah satu tempat terbaik untuk menonton tari kecak di Bali, selain menonton tari kecak di Uluwatu. Salah satu tempat pementasan tarian kecak di Ubud adalah di Pura Taman Saraswati Ubud.
-
-      section
-        h2 Menonton Tari Kecak Di Pura Taman Saraswati Ubud
-        p Sebelum kami menuliskan tentang tari kecak di Pura Taman Saraswati Ubud. Ada baiknya kami menuliskan sedikit tentang pura Pura Taman Saraswati Ubud.
+        p Untuk mencari lokasi dari tiap-tiap pementasan dari tarian kecak di Ubud, tentunya bagi anda yang tidak terlalu faham akan jalan-jalan di Ubud, maka akan kesulitan. Selain itu, jika anda memutuskan membawa kendaraan sendiri, untuk mencari tempat parkir di kawasan objek wisata Ubud, akan sangat susah. Ini dikarenakan sangat jarang tersedia lahan parkir dan sebagian besar, orang parkir dipinggir jalan dan lebih cendrung penuh dan susah untuk mencari.
+      section        
+        p Oleh sebab itu, jika anda berencana wisata ke Ubud dan memutuskan untuk menonton tari kecak api di Ubud, sebaiknya menggunakan jasa sewa mobil dengan driver di Bali. Dengan cara sewa mobil di Bali dengan supir, anda tidak perlu susah untuk mencari lokasi pementasan dan tempat parkir mobil
 
       Section
-        P Seperti yang anda tahu, pura adalah tempat suci agama hindu di Bali dan pura Taman Saraswati Ubud adalah salah satunya. Pura ini, sesuai dengan namanya adalah tempat pemujaan Dewi Saraswati (Dewi Pengetahuan). Lokasi dari pura ini, terdapat di jalan raya Ubud.
-        p Pura Taman Saraswati Ubud, sedikit berbeda dari pura-pura lain yang ada di Bali. Pura ini memiliki kolam yang banyak terdapat bunga teratai dan kolam teratai inilah, daya tarik utama dari pura Saraswati.
-        p Jika anda menyukai melihat seni ukir khas Ubud Bali, disinilah tempatnya untuk melihat. Hampir setiap bangunan pura, terdapat seni ukir dari para seniman Ubud.
+        P Selain di Ubud, tempat pementasan tarian kecak yang paling populer adalah di pura Uluwatu. Kenapa tarian kecak di Pura Uluwatu diminati oleh wisatawan? Hal ini dikarenakan pada saat menonton tari kecak di Uluwatu, wisatawan dapat menikmati matahari terbenam, sebagai latar belakang.
 
 
       section
-        h2 Pura Kolam Bunga Teratai
-        p Pura ini memiliki panggung pemantasan tari kecak dan panggung di kelilingi oleh kolam teratai. Saat anda liburan di Bali dan berencana untuk menonton tarian kecak Ubud di Pura Taman Saraswati, sebaiknya anda memperhatikan terlebih dahulu, jadwal pementasan tarian kecak di Pura Taman Saraswat Ubud. Tidak setiap hari, diadakan pementasan tarian kecak di pura ini.
+        h3 Gambaran Tari Kecak Api Ubud di Pura Uluwatu
+        img(src="images/tari-kecak-di-pura-uluwatu.jpg")
 
       Section
-        h1 Jadwal Pementasan Tari Kecak Di Pura Taman Saraswati Ubud
+        h2 Jadwal & Harga Tiket Tari Kecak Ubud
+        p Jika anda ingin nonton tari kecak api di Ubud, pementasan tarian kecak hanya dilakukan pada saat malam hari. Pertunjukan tari kecak Ubud, biasanya dimulai pada jam 19:00. Di Ubud ada dua tempat terkenal untuk menonton tari kecak. Tempat pertujukan tari kecak Ubud dipentaskan antara lain di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Jadwal pementasan dituliskan di slide berikutnya
 
       Section
-         p Hari selasa dan hari kamis, mulai pertunjukan jam 19:30, dengan harga tiket Rp 75.000 per orang. Pertunjukan tarian kecak di bawakan oleh group tari Sandhi Suara.
-         p Bagi anda yang ingin menonton tarian kecak di Ubud tidak akan susah, walupun anda tidak datang pada hari selasa atau kamis. Setiap hari diadakan pementasan tarian kecak di Ubud, hanya tempat pementasannya yang berbeda-beda.
-         <p style="color:red"> Lihat di sini <a href="http://www.rentalmobilbali.net/tari-kecak-ubud/">Jadwal Tari Kecak Ubud.</a></p>
+         h3 Hari Minggu
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Padang Tegal Kaja
+             td 19:00
+             td Trene Jenggala
+             td Rp. 75.000,-
+           tr(align='left')
+             td Pura Batukaru
+             td 19:30
+             td Desa Adat Sambahan 
+             td Rp. 75.000,-
 
       Section
-        p 
-
+         h3 Hari Senin
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Desa Junjungan
+             td 18:30
+             td Desa Adat Junjungan
+             td Rp. 75.000,-
+           tr(align='left')
+             td Pura Dalem Ubud
+             td 19:30
+             td Adat Ubud Kaja
+             td Rp. 80.000,-
 
       Section
-        h2 
-        p 
+         h3 Hari Selasa
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Lokasi Pentas
+             td Jam
+             td Oleh 
+             td Harga Tiket
+           tr(align='left') 
+             td Jaba Pura Taman Sari
+             td 19:00
+             td Sandhi Suara
+             td Rp. 75.000,-
 
       Section
         p 
@@ -68,3 +103,7 @@ html
 
 
     script(src='build/build.js')
+
+
+
+
