Penambahan Pada Pura Taman Saraswati

--- a/src/3. Pura Taman Saraswati .jade
+++ b/src/3. Pura Taman Saraswati .jade
@@ -46,25 +46,18 @@ html
          <p style="color:red"> Lihat di sini <a href="http://www.rentalmobilbali.net/tari-kecak-ubud/">Jadwal Tari Kecak Ubud.</a></p>
 
       Section
-        p 
+        p Bagi anda yang tidak memilih hotel tempat menginap di Ubud dan berencana untuk wisata ke Ubud, ada beberapa cara yang dapat anda lakukan untuk dapat berwisata ke objek wisata Ubud.
+        h3 1. Mencari Jasa Sewa Mobil Dengan Supir Di Bali
+        p Dengan cara menyewa mobil + driver di Bali, akan sangat memudahkan anda untuk berpergian dari satu tempat wisata di Bali ke tempat wisata yang lain, tanpa memikirkan mencari tempat parkir, mencari jalan pintas, serta memikirakan tetang kemacetan jalanan.
 
 
       Section
-        h2 
-        p 
+        p Objek wisata di Ubud, sangat jarang tersedia tempat parkir mobil, hampir sebagian besar, orang parkir di penggir jalan dan sangat sering penuh. Karena hal ini, kami sangat menyarankan anda untuk mencari penyedia jasa rent car di Bali dengan supir.
 
       Section
-        p 
-
-
-      Section
-        p 
-
-
-
-
-
-
+        h3 2. Membeli Paket Wisata Murah Di Bali
+        p Karena Ubud sangat terkenal dan mendapat permintaan yang sangat tinggi dari wisatawan, maka sangat banyak penyedia usaha perjalanan wisata yang menyediakan Ubud tour.
+        p Kelebihan dari membeli paket tour murah di Bali, selain anda mendapat kelebihan layanan jasa sewa mobil dengan supir, jadwal tour anda akan terencana dan terarah. Selain itu, budget liburan anda akan terencana. 
 
 
     script(src='build/build.js')
