--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Tari Kecak Ubud
+    title Tampak Siring
 
     link(rel='stylesheet', type='text/css', href='build/build.css')
 
@@ -11,99 +11,78 @@ html
 
     article
 
-      Section
-        h1 Tari Kecak Ubud
-        img(src="images/Tari-Kecak-Ubud.jpg")
+      section
+        h1 Tampak Siring
 
       section
-        h3 Gambaran Tari Kecak Api Ubud
-        img(src="images/Tari-Kecak-Ubud-1.jpg")
+        h2 Tampak Siring
+        p
+          Tampak Siring, nama sebuah kecamatan di kabupaten Gianyar, luas dari wilayah kecamatan Tampak Siring, sebesar 42,63 kilometer persegi. Jika anda berangkat dari airport Ngurah Rai Denpasar, maka anda perlu waktu satu jam lima belas menit, untuk ke tempat wisata di Ubud ini dengan mobil. Tampak Siring lebih dikenal dikalangan wisatawan sebagai sebuah pura yang bernama Tirta Empul.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        img.big(src="images/Tampak Siring - 1.jpg")
 
       section
-        p Untuk mencari lokasi dari tiap-tiap pementasan dari tarian kecak di Ubud, tentunya bagi anda yang tidak terlalu faham akan jalan-jalan di Ubud, maka akan kesulitan. Selain itu, jika anda memutuskan membawa kendaraan sendiri, untuk mencari tempat parkir di kawasan objek wisata Ubud, akan sangat susah. Ini dikarenakan sangat jarang tersedia lahan parkir dan sebagian besar, orang parkir dipinggir jalan dan lebih cendrung penuh dan susah untuk mencari.
-      section        
-        p Oleh sebab itu, jika anda berencana wisata ke Ubud dan memutuskan untuk menonton tari kecak api di Ubud, sebaiknya menggunakan jasa sewa mobil dengan driver di Bali. Dengan cara sewa mobil di Bali dengan supir, anda tidak perlu susah untuk mencari lokasi pementasan dan tempat parkir mobil
+        p
+          Tirta Empul adalah nama sebuah pura yang terletak di kecamatan Tampak Siring. Pura Tirta Empul banyak dikunjungi para wisatawan, baik dari mancanegara maupun wisatawan domestik. Objek wisata Tirta Empul, merupakan salah satu, tempat liburan di Bali yang wajib dikunjungi. Di pura Tirta Empul, terdapat mata air dan juga digunakan oleh masyarakat pemeluk agama Hindu, untuk permandian dan memohon tirta suci.
 
-      Section
-        P Selain di Ubud, tempat pementasan tarian kecak yang paling populer adalah di pura Uluwatu. Kenapa tarian kecak di Pura Uluwatu diminati oleh wisatawan? Hal ini dikarenakan pada saat menonton tari kecak di Uluwatu, wisatawan dapat menikmati matahari terbenam, sebagai latar belakang.
-
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        img.big(src="images/Tampak Siring - 2.jpg")
 
       section
-        h3 Gambaran Tari Kecak Api Ubud di Pura Uluwatu
-        img(src="images/tari-kecak-di-pura-uluwatu.jpg")
+        h1 Sejarah Tampak Siring
 
-      Section
-        h2 Jadwal & Harga Tiket Tari Kecak Ubud
-        p Jika anda ingin nonton tari kecak api di Ubud, pementasan tarian kecak hanya dilakukan pada saat malam hari. Pertunjukan tari kecak Ubud, biasanya dimulai pada jam 19:00. Di Ubud ada dua tempat terkenal untuk menonton tari kecak. Tempat pertujukan tari kecak Ubud dipentaskan antara lain di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Jadwal pementasan dituliskan di slide berikutnya
+      section
+        h2
+          Sejarah Tampak Siring Pura Tirta Empul
+        p
+          Nama Tampak Siring berasal dari kata Tampak yang berarti telapak dan Siring berarti miring. Usana Bali salah satu lontar yang menceritakan tentang sejarah Tampak Siring Bali. Telapak yang ada dalam nama tempat wisata ini, diceritakan sebagai telapak dari raja yang bernama Mayadenawa.
 
-      Section
-         h3 Hari Minggu
-         table(border=0 cellpadding=5 cellspacing=10)
-           tr(align='left')
-             td Lokasi Pentas
-             td Jam
-             td Oleh 
-             td Harga Tiket
-           tr(align='left') 
-             td Padang Tegal Kaja
-             td 19:00
-             td Trene Jenggala
-             td Rp. 75.000,-
-           tr(align='left')
-             td Pura Batukaru
-             td 19:30
-             td Desa Adat Sambahan 
-             td Rp. 75.000,-
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        img.big(src="images/Tampak Siring - 3.jpg")
 
-      Section
-         h3 Hari Senin
-         table(border=0 cellpadding=5 cellspacing=10)
-           tr(align='left')
-             td Lokasi Pentas
-             td Jam
-             td Oleh 
-             td Harga Tiket
-           tr(align='left') 
-             td Desa Junjungan
-             td 18:30
-             td Desa Adat Junjungan
-             td Rp. 75.000,-
-           tr(align='left')
-             td Pura Dalem Ubud
-             td 19:30
-             td Adat Ubud Kaja
-             td Rp. 80.000,-
+      section
+        p
+          Mayadenawa diceritakan seorang raja sakti, tapi memiliki sifat jahat dan beraggapan dirinya adalah seorang dewa. Karena bersifat jahat, maka Dewa Indra mengirim pasukan beliau, untuk menghancurkan Mayadenawa. Mayadenawa kalah perang melawan Dewa Indra dan Mayadenawa lari kehutan. Untuk menghilangkan jejak, Mayadenawa berjalan dengan memiringkan kakinya ke tengah hutan.
 
-      Section
-         h3 Hari Selasa
-         table(border=0 cellpadding=5 cellspacing=10)
-           tr(align='left')
-             td Lokasi Pentas
-             td Jam
-             td Oleh 
-             td Harga Tiket
-           tr(align='left') 
-             td Jaba Pura Taman Sari
-             td 19:00
-             td Sandhi Suara
-             td Rp. 75.000,-
+      section
+        p
+          Walaupun Mayadenawa berusaha menghilangkan jejak, tapi usahanya melarikan diri gagal. Sebelum berhasil ditangkap oleh pasukan dewa Indra, Mayadenawa menciptakan mata air beracun. Dengan mata air beracun, Mayadenawa berhasil membunuh sebagian dari pasukan dewa Indra, yang mengejar Mayadenawa.
 
-      Section
-        p 
+      section
+        p
+          Untuk mengatasi mata air beracun dari Mayadenawa, Dewa Indra menciptakan mata air penawar racun. Mata air ini yang bernama Tirta Empul (air suci), oleh karena itu Pura yang memiliki mata air ini disebut dengan nama pura Tirta Empul. Hutan yang digunakan untuk Mayadenawa melarikan diri, dengan posisi kakinya dimiringkan inilah yang sekarang menjadi kawasan wisata Tampak Siring. Lihat disini, lokasi dari Pura Tirta Empul di Google Map.
 
+       section
+        h2 Istana Tampak Siring 
+        h3 Tempat Wisata Di Bali
 
-      Section
-        p 
+      section
+        p selain pura,di tempat wisata ini terdapat istana kepresidenan yang didirikan oleh presiden pertama indonesia,IR soekarno sebagai tempat peristirahatan beliau saat berkunjung ke Bali. Istana tampak Siring dibangun dari tahun 1957 - 1960.
+          
+      section
+        p Pembangunan istana kepresidenan Tampaksiring dilakukan secara perlahan-lahan dan mengalami tahapan. Artiktek yang mendesain istana kepresidenan adalah RM Soedarsono. Bangunan awal yang di bangun pada tahun 1957 adalah wisma Merdeka dan wisma Yudistira.
+       
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        img.big(src="images/Tampak Siring -4.jpg")
 
+      section
+        p Istana Tampak Siring mengalami penambahan bangunan pada tahun 2003, yang diperuntukan untuk KTT ASEAN Summit XIV. Penambahan bangunan pada Istana Tampak Siring, berupa bangunan untuk sarana konfrensi dan resepsi tamu negara. Balai Wantilan yang ada di Istana Tampak Siring, juga mengalami renovasi untuk acara pertujukan kesenian tamu negara.
+        p Tujuan dari pembangunan istana kepresidenan ini, sebagai tempat Presiden, keluarga presiden dan tamu negara beristirahat saat berkunjung ke pulau Bali.
 
+      section
+        h2 Cara Terbaik ke Pura Tirta Empul Tampak Siring
 
+      section
+        p Jika anda liburan ke Bali, sebaiknya anda meluangkan waktu untuk datang ke kawasan wisata pura Tirta Empul dan berkunjung ke istana presiden. Banyak pengalaman dan hal baru yang akan anda ketahui, jika anda berwisata ke pura Tirta Empul. Jika anda menyukai objek wisata Tirta Empul, maka anda pasti akan menyukai objek wisata pura Taman Ayun Mengwi.
+        p Tentunya saat ingin wisata ke pura Tirta Empul, anda pastinya akan memerlukan sarana transfortasi. Saat ini di Bali belum ada sarana transfortasi umum, dari tempat wisata Bali selatan menuju ke kawasan wisata pura Tirta Empul.
 
-
+      section
+        p Jika anda menginap di kawasan wisata Ubud, menggunakan taksi salah satu saranan transfortasi yang dapat anda gunakan. Jika anda berencana mengunjungi lebih dari satu tempat wisata di Bali, tidak hanya ke pura Tirta Empul. Maka menggunakan jasa Bali sewa mobil supir salah satu cara terbaik untuk mendapatkan sarana transportasi murah
+      
+      section       
+        p Selain menyediakan jasa sewa mobil murah di Bali dengan supir, kami juga menyediakan jasa paket wisata di Bali untuk wisata ke pura Tirta Empul. Sebagian besar pelanggan kami yang memilih paket wisata saat liburan di Bali, tidak ingin ribet untuk memikirkan akan, biaya tiket masuk, biaya parkir kendaraan, biaya bahan bakar minyak serta biaya makan. Selain tidak ribet, dengan membeli paket wisata ke Bali, total biaya liburan akan jauh lebih murah dari pada anda tidak membeli paket tour.
 
 
 
     script(src='build/build.js')
-
-
-
-
