--- a/src/4. Tari Kecak Ubud .jade
+++ b/src/4. Tari Kecak Ubud .jade
@@ -20,7 +20,7 @@ html
         img(src="images/Tari-Kecak-Ubud-1.jpg")
 
       section
-        p Untuk mencari lokasi dari tiap-tiap pementasan dari tarian kecak di Ubud, tentunya bagi anda yang tidak terlalu faham akan jalan-jalan di Ubud, maka akan kesulitan. Selain itu, jika anda memutuskan membawa kendaraan sendiri, untuk mencari tempat parkir di kawasan objek wisata Ubud, akan sangat susah. Ini dikarenakan sangat jarang tersedia lahan parkir dan sebagian besar, orang parkir dipinggir jalan dan lebih cendrung penuh dan susah untuk mencari.
+        p Untuk mencari lokasi dari tiap-tiap pementasan dari tarian kecak di Ubud, tentunya bagi anda yang tidak terlalu paham akan jalan-jalan di Ubud, maka akan kesulitan. Selain itu, jika anda memutuskan membawa kendaraan sendiri, untuk mencari tempat parkir di kawasan objek wisata Ubud, akan sangat susah. Ini dikarenakan sangat jarang tersedia lahan parkir dan sebagian besar, orang parkir dipinggir jalan dan lebih cendrung penuh dan susah untuk mencari.
       section        
         p Oleh sebab itu, jika anda berencana wisata ke Ubud dan memutuskan untuk menonton tari kecak api di Ubud, sebaiknya menggunakan jasa sewa mobil dengan driver di Bali. Dengan cara sewa mobil di Bali dengan supir, anda tidak perlu susah untuk mencari lokasi pementasan dan tempat parkir mobil
 
@@ -30,11 +30,9 @@ html
 
       section
         h3 Gambaran Tari Kecak Api Ubud di Pura Uluwatu
-        img(src="images/tari-kecak-di-pura-uluwatu.jpg")
+        img(src="images/tari-kecak-di-pura-uluwatu.jpg" width = 600)
 
-      Section
-        h2 Jadwal & Harga Tiket Tari Kecak Ubud
-        p Jika anda ingin nonton tari kecak api di Ubud, pementasan tarian kecak hanya dilakukan pada saat malam hari. Pertunjukan tari kecak Ubud, biasanya dimulai pada jam 19:00. Di Ubud ada dua tempat terkenal untuk menonton tari kecak. Tempat pertujukan tari kecak Ubud dipentaskan antara lain di Pura Dalem Ubud dan Padang Tegal Kaja Ubud. Jadwal pementasan dituliskan di slide berikutnya
+      
 
       Section
          h3 Hari Minggu
@@ -103,6 +101,8 @@ html
 
 
     script(src='build/build.js')
+
+
 
 
 
